# novafc-hardware

./: .gitignore  .gitmodules  GitHub - Shortcut.lnk  README.md
Software/: Cargo.toml  README.md  memory.x
Software/.cargo/: config.toml
Software/Computer/: README
Software/MCU/: CMakeLists.txt  README
Software/MCU/Board/: .cproject  .mxproject  .project  Nova_board Debug (1).launch  Nova_board Debug (2).cfg  Nova_board Debug (2).launch  Nova_board Debug.launch  Nova_board.ioc  STM32F401RBTX_FLASH.ld
Software/MCU/Board/Core/Inc/: barometer.h  main.h  stm32f4xx_hal_conf.h
Software/MCU/Board/Core/Src/: Barometer.c  main.c  stm32f4xx_hal_msp.c  syscalls.c
Software/MCU/Board/Debug/: Nova_board.elf  Nova_board.list  Nova_board.map  makefile  objects.list
Software/MCU/Rocket/: .gitignore  CMakeLists.txt  README.md
Software/MCU/Rocket/Brain/: CMakeLists.txt  README.md
Software/MCU/Rocket/Brain/Include/: Brain.hpp
Software/MCU/Rocket/Brain/include/: Brain.hpp
Software/MCU/Rocket/Brain/src/: Brain.cpp
Software/MCU/Rocket/Brain/testing/: BrainTester.cpp  FlightLoader.cpp  FlightLoader.hpp
Software/MCU/Rocket/Logger/: .gitignore  CMakeLists.txt  Logger.cbp  Logger.cpp  Logger.depend  Logger.h  Logger.layout  LoggerTester.cpp  README.md
Software/MCU/Rocket/Logger/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Software/MCU/Rocket/Logger/include/: Logger.hpp
Software/MCU/Rocket/Logger/src/: Logger.cpp
Software/MCU/Rocket/Logger/test/: testDebug.cpp  testError.cpp  testEvent.cpp  testFatal.cpp  testInfo.cpp  testWarning.cpp
Software/MCU/Rocket/MessageParser/: CMakeLists.txt  README.md
Software/MCU/Rocket/MessageParser/include/: MessageHandler.hpp
Software/MCU/Rocket/MessageParser/src/: MessageHandler.cpp
Software/MCU/Rocket/MessageParser/test/: TransmitSnooper.cpp  TransmitSnooper.hpp  workingTest.cpp
Software/MCU/Rocket/RocketData/: CMakeLists.txt  README.md
Software/MCU/Rocket/RocketData/Include/: RocketData.h  cartesian.h
Software/MCU/Rocket/RocketData/include/: RocketData.hpp
Software/MCU/Rocket/RocketData/src/: RocketData.cpp  RocketData.h
Software/MCU/Rocket/RocketData/testing/: AngleTester.cpp  FlightLoader.cpp  FlightLoader.hpp  NoNoiseFlight.cpp  RocketDataTester.cpp
Software/MCU/Rocket/RocketLayer/: CMakeLists.txt  CMakeLists.txt~  README.md
Software/MCU/Rocket/RocketLayer/include/: .#RocketLayer.hpp  RocketLayer.hpp  RocketLayer.hpp~
Software/MCU/Rocket/RocketLayer/src/: RocketLayer.cpp  RocketLayer.cpp~
Software/MCU/Rocket/RocketLayer/test/: BasicLaunch.cpp  LayerTester.cpp  LayerTester.hpp  MessageHandler.cpp  MessageHandler.hpp
Software/MCU/Rocket/SensorValues/: CMakeLists.txt  README.md
Software/MCU/Rocket/SensorValues/Include/: SensorValues.h  cartesian.h
Software/MCU/Rocket/SensorValues/include/: SensorValues.hpp
Software/MCU/Rocket/SensorValues/src/: CMakeLists.txt  SensorValues.cpp
Software/MCU/Rocket/SensorValues/testing/: SensorValuesTester.cpp
Software/MCU/Rocket/StateMachine/: .gitignore  CMakeLists.txt  README.md
Software/MCU/Rocket/StateMachine/StateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  StateMachineTester.cpp
Software/MCU/Rocket/StateMachine/include/: StateMachine.hpp
Software/MCU/Rocket/StateMachine/src/: StateMachine.cpp
Software/MCU/Rocket/StateMachine/test/: testLinkedList.cpp  testOneStageFlight.cpp  testRandomChanges.cpp  testStateMapSetup.cpp  testTwoStageFlight.cpp
Software/MCU/Rocket/Top/: CMakeLists.txt
Software/MCU/Rocket/Top/include/: RocketLib.hpp
Software/MCU/Rocket/Top/src/: RocketLib.cpp
Software/MCU/Rocket/common/: CMakeLists.txt  README.md
Software/MCU/Rocket/common/include/: Cartesian.hpp  Common.hpp  CommonDefines.hpp  Matrix.hpp  Quanternion.hpp  State.hpp  cartesian.h
Software/MCU/Rocket/common/src/: Common.cpp
Software/MCU/Rocket/common/testing/: CartesianMath.cpp  MatrixTest.cpp  QuanternionMath.cpp
Software/MCU/Rocket/commonTest/: CMakeLists.txt  CMakeLists.txt~  README.md
Software/MCU/Rocket/commonTest/include/: FlightLoader.hpp  LowLevelSimulator.hpp  LowLevelSimulator.hpp~
Software/MCU/Rocket/commonTest/src/: FlightLoader.cpp  LowLevelSimulator.cpp
Software/MCU/Rocket/configuration/: CMakeLists.txt  README.md
Software/MCU/Rocket/configuration/include/: Configuration.hpp
Software/MCU/Rocket/configuration/src/: Configuration.cpp
Software/MCU/Rocket/configuration/testing/: testAltitudeDetermination.cpp  testArmingAltitude.cpp  testByteStoreAndLoad.cpp  testDefaults.cpp  testDrogueChute.cpp  testDroguePyroChannel.cpp  testLayerTimeSteps.cpp  testLoggingRates.cpp  testMainPyroChannel.cpp  testPyroChannels.cpp  testSafeDefaults.cpp  testSafetyLock.cpp  testTwoStage.cpp  (+1 more)
Software/MCU/Rocket/include/: cartesian.h
Software/MCU/RocketData/: CMakeLists.txt
Software/MCU/RocketData/src/: RocketData.h
Software/MCU/SensorValues/: CMakeLists.txt
Software/MCU/SensorValues/src/: SensorValues.h
Software/MCU/include/: README
Software/MCU/src/: README
Software/MCU_tester/: README
Software/RocketData/src/: CMakeLists.txt  RocketData.cpp
Software/SensorValues/src/: SensorValues.cpp
Software/Teensy/: README
Software/control/: Cargo.toml
Software/control/src/: lib.rs
Software/data-acquisition/: Cargo.toml
Software/data-acquisition/src/: lib.rs  time_std.rs
Software/doc/: reference-toml.toml
Software/h3lis331dl_accel/: Cargo.toml
Software/h3lis331dl_accel/src/: lib.rs
Software/main/: Cargo.toml
Software/main/src/: main.rs
Software/nova-software/: .gitignore  Cargo.toml  memory.x
Software/nova-software/.cargo/: config.toml
Software/nova-software/data-acquisition/: Cargo.toml
Software/nova-software/data-acquisition/src/: lib.rs
Software/nova-software/main/: Cargo.toml
Software/nova-software/main/src/: main.rs
Software/nova-software/state-machine/: Cargo.toml
Software/src/: main.rs
Software/state-machine/: Cargo.toml
Software/state-machine/src/: lib.rs
Software/state-machine/tests/: tests.rs
Software/telemetry/: Cargo.toml
Software/telemetry/src/: errors.rs  lib.rs  main.rs  sdfile.rs
(+237 files in other folders)
