[package]
name = "state-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7.7"
cortex-m = "0.7.3"
#nova-software-common = { git = "https://github.com/ERFSEDS/nova-software-common" }
nova-software-common = { path = "../../../nova-software-common" }
data-acquisition = { path = "../data-acquisition/" }
control = { path = "../control" }

[features]
std = []
default = ["std"]
