[package]
name = "telemetry"
version = "0.1.0"
edition = "2018"

[features]
default = []
std = []




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = "0.7.4"
cortex-m-rt ="0.7"

panic-halt = "0.2"

embedded-sdmmc = "0.3.0"

[dependencies.stm32f4xx-hal]
version = "0.12.0"
features = ["rt", "stm32f412"]

